# libfem

./: CMakeLists.txt
cmake_modules/: GetProjectFiles.cmake
libfem/: CMakeLists.txt
libfem/include/libfem/: exception.h  type_definitions.h
libfem/include/libfem/io/: vector_io.h
libfem/include/libfem/linalg/: sparse_matrix.h
libfem/src/io/: vector_io.cpp
